# any-switch

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  SECURITY.md  build.rs  package.json
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  release_checklist.yml
.github/workflows/: ci.yml  release.yml
docs/: acceptance.md  design.md  evidence-followups.md  manual-evidence-template.md  manual-verification.md  release.md  user-guide.md  user-guide.zh-CN.md
npm/: install.js
scripts/: manual-evidence.ps1  manual-evidence.sh  package-release.sh  sign-macos-binary.sh  verify-local.sh  verify-packages.sh
src/: backup.rs  capture.rs  cli.rs  handlers.rs  identity.rs  keychain.rs  lib.rs  lock.rs  main.rs  paths.rs  process.rs  profiles.rs  redaction.rs  state.rs
src/app_definitions/: mod.rs
src/app_definitions/builtin/: claude.yaml  codex.yaml
tests/: apps.rs  cli.rs  doctor.rs  help.rs  oauth.rs  release.rs  restore.rs
tests/support/: mod.rs
