[package]
name = "switch-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0 OR MIT"
description = "Local profile/state switcher for AI CLI tools."
readme = "README.md"
repository = "https://github.com/riverscn/switch-cli"
homepage = "https://github.com/riverscn/switch-cli"
keywords = ["cli", "profiles", "credentials", "switcher"]
categories = ["command-line-utilities", "config"]

[lib]
name = "switch_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
home = "0.5"
indexmap = { version = "2", features = ["serde"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
toml_edit = { version = "0.22", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
