[package]
name = "any-switch"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "MIT"
description = "Local app profile/state switcher."
readme = "README.md"
repository = "https://github.com/riverscn/any-switch"
homepage = "https://github.com/riverscn/any-switch"
documentation = "https://github.com/riverscn/any-switch/tree/main/docs"
keywords = ["cli", "profiles", "credentials", "switcher"]
categories = ["command-line-utilities", "config"]
exclude = [
    ".claude/**",
    ".codex/**",
    ".any-switch/**",
    ".any-switch-*",
    ".any-switch-*/**",
    ".DS_Store",
    "**/.DS_Store",
    ".smoke-*",
    ".test-*",
    ".tmp/**",
    ".tmp-*",
    ".tmp-*/**",
    "/manual-evidence-*.md",
]

[lib]
name = "any_switch"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
home = "0.5"
indexmap = { version = "2", features = ["serde"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
toml_edit = { version = "0.22", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_IO"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
